--- a/humor-negro.css
+++ b/humor-negro.css
@@ -18,7 +18,7 @@ body {
 
 .logo {
     width: 390px;
-    height: 300px;
+    height: 200px;
 }
 
 img {
@@ -155,7 +155,12 @@ a {
 
     .logo {
         width: 100%;
-        height: auto;
+        height: 300px;
+    }
+
+    img {
+        width: 100%;
+        height: 100%;
     }
 
     h1 {
