--- a/styles.css
+++ b/styles.css
@@ -193,6 +193,11 @@ a {
         height: 300px;
     }
 
+    img {
+        width: 100%;
+        height: 100%;
+    }
+
     h1 {
         font-size: 18px;
         margin-top: 30px;
