--- a/humor-negro.css
+++ b/humor-negro.css
@@ -3,7 +3,7 @@
 
 
 body {
-    max-height: 100vh;
+    max-height: 844px;
     display: grid;
     place-content: center;
     align-content: center;
